--- a/packages/core-js-builder/package.json
+++ b/packages/core-js-builder/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@core-js/compat": "3.11.3",
     "core-js": "3.11.13",
+    "terser": "^5.6.1",
     "webpack": "^5.35.1"
   },
   "engines": {
